# PaddleCustomDevice

./: README.md
.github/workflows/: CI.yml  _HPU.yml  _Metax-X86.yml  update_paddle_submodule.yml
backends/iluvatar_gpu/: CMakeLists.txt  README.md  README_cn.md  build_paddle.sh  clean_paddle.sh  install_paddle.sh
backends/iluvatar_gpu/cmake/: cblas.cmake  cuda.cmake
backends/iluvatar_gpu/common/: cuda_flags.cc
backends/iluvatar_gpu/kernels/cuda_kernels/: abs_grad_kernel_register.cc  accuracy_kernel_register.cu  activation_grad_kernel_register.cc  adam_kernel_register.cu  add_n_kernel_register.cu  addmm_kernel_register.cc  argsort_grad_kernel_register.cu  c_embedding_grad_kernel.cu  c_embedding_kernel.cu  complex_kernel_register.cu  (+61 more)
backends/iluvatar_gpu/patches/: paddle-corex.patch
backends/iluvatar_gpu/runtime/: iluvatar_context.cc  iluvatar_context.h  runtime.cc
backends/iluvatar_gpu/tests/: CMakeLists.txt  run_test.sh
backends/iluvatar_gpu/tests/unittests/: test_addmm_op_iluvatar.py  test_arange_iluvatar.py  test_cumsum_op_iluvatar.py  test_empty_op_iluvatar.py  test_flash_attention_iluvatar.py  test_full_like_op_iluvatar.py  test_max_op_iluvatar.py  test_p_norm_op_iluvatar.py  test_scatter_nd_op_iluvatar.py  test_strided_slice_op_iluvatar.py  test_transpose_op_iluvatar.py  test_zeros_like_op_iluvatar.py
backends/intel_hpu/kernels/: elementwise_kernel.cc  full_kernel.cc  funcs.h  hpu_funcs.h  multiply_kernel.cc  swiglu_kernel.cc
backends/intel_hpu/tests/: config.py
backends/metax_gpu/: CMakeLists.txt  build_in_metax.sh  change_patch.sh  compile.sh
(+87 files in other folders)
